--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head></head>
-    <body background ="https://e0.pxfuel.com/wallpapers/875/426/desktop-wallpaper-i-whatsapp-background-chat-whatsapp-graffiti-thumbnail.jpg">
+    <body style=" background : rgb(107, 95, 128);">
         <center><big><FONT color="white">"EINBRAINTON"<br>GAIN YOUR SUCCESS WHICH YOU DESIRE</FONT></big></center>
 
     
